--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,11 @@
 # 開発環境
-FROM node:10.12-alpine as build-stage
+FROM node:12.6.0-alpine
+#FROM node:10.12-alpine as build-stage
+
 # コンテナ内に/appディレクトリを作り
 WORKDIR /app
 # ローカルのwebディレクトリにあるファイルを全てコンテナにコピー
-COPY web/. .
+COPY . .
 
 # 依存モジュールをインストールします
 RUN npm install
