--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^4.1.0",
+    "vue-youtube": "^1.4.0",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
