--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@mdi/font": "^4.5.95",
     "@mdi/js": "^4.5.95",
     "axios": "^0.19.0",
+    "bulma": "^0.8.0",
     "core-js": "^2.6.5",
+    "font-awesome": "^4.7.0",
+    "path-to-regexp": "^3.1.0",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^4.1.0",
+    "vue-sidebar-menu": "^4.4.1",
     "vue-youtube": "^1.4.0",
     "vuetify": "^2.0.0"
   },
